fixed spacing between icons

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -357,7 +357,7 @@ header {
         opacity: 0.3;
         background-repeat: no-repeat;
         background-position: center top;
-        margin: 20px 10px 20px 10px;
+        margin: 20px 0px 20px 0px;
 
         span.image {
           display: inline-block;
